--- a/src/views/navbar.pug
+++ b/src/views/navbar.pug
@@ -7,3 +7,5 @@ nav(class="navbar")
             a(href="/artist") Artistas 
         li(class="nav-link") 
             a(href="/band") Bandas
+        li(class="nav-link") 
+            a(href="/song") canciones
