--- a/src/views/song/new.pug
+++ b/src/views/song/new.pug
@@ -1,10 +1,11 @@
 extends ../layout
 
 block content 
-    form(action="/song", method="post") 
-        label(for="title") Titulo 
-        input(id="title" type="text" name="title") 
-        label(for="length") Duracion
-        input#length(type="integer", name="length")  
-        button(type="submit") Crear
-
+    form(action="/song", method="post")
+      label(for="title") Title:
+      input(type="text", id="title", name="title", required)
+      br
+      label(for="length") Length (seconds):
+      input#length(type="number", name="length", min="1", required)
+      br
+      button(type="submit") Create
